tests/ui/type-alias-impl-trait/multi-error.stderr
error[E0792]: non-defining opaque type use in defining scope
  --> $DIR/multi-error.rs:17:17
   |
LL |     fn foo() -> (Self::Bar<u32>, Self::Baz) {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ argument `u32` is not a generic parameter
   |
note: for this opaque type
  --> $DIR/multi-error.rs:15:19
   |
LL |     type Bar<T> = impl Sized;
   |                   ^^^^^^^^^^

error[E0792]: expected generic type parameter, found `u32`
  --> $DIR/multi-error.rs:17:17
   |
LL |     type Bar<T> = impl Sized;
   |              - this generic parameter must be used with a generic type parameter
LL |     type Baz = impl Sized;
LL |     fn foo() -> (Self::Bar<u32>, Self::Baz) {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0792`.
